client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: development
  labels:
    k8s-app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: client
  template:
    metadata:
      name: client
      labels:
        k8s-app: client
    spec:
      containers:
        - name: client
          image: subfuzion/netcat
          securityContext:
            privileged: false
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          command: ["tail"]
          args: ["-f", "/dev/null"]
