destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service
  namespace: development
spec:
  host: service
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
